# agentic-financial-planner-lab

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  evals.yml  release.yml
docs/: README.md
docs/case-studies/: data-gaps-and-csv-import.md  data-gaps-memo.audit.json  data-gaps-memo.md  on-track-couple-memo.md  on-track-couple.md  rejected-memo.md
evals/: run_evals.py
evals/golden/: deficit-household.yaml  education-family.yaml  fire-early.yaml  minimal-edge.yaml  near-retiree.yaml  no-portfolio.yaml  on-track-couple.yaml  pension-household.yaml  under-saver.yaml  young-saver.yaml
evals/reports/: latest.md
examples/: hello_agent.py
examples/cases/: incomplete_household.yaml  sample_household.yaml
examples/data/: sample_transactions_monarch.csv
scripts/: slopcheck.sh
src/planner_lab/: __init__.py  case_io.py  cli.py  protocols.py  telemetry.py
src/planner_lab/adapters/: __init__.py
src/planner_lab/adapters/csv_import/: __init__.py  importer.py  mapping.py
src/planner_lab/adapters/fundedness_metric/: __init__.py  metric.py
src/planner_lab/adapters/lifecycle/: __init__.py  allocation.py
src/planner_lab/adapters/mcp_research/: __init__.py  source.py
src/planner_lab/adapters/monteplan/: __init__.py  simulator.py
src/planner_lab/agents/: __init__.py  llm_critic.py  memo_writer.py  models.py  orchestrator.py  pipeline.py  state.py  structured.py  tools.py
src/planner_lab/calculators/: __init__.py  conversions.py  fi_timeline.py  funded_ratio.py  withdrawal.py
src/planner_lab/critic/: __init__.py  checks.py  run.py
src/planner_lab/hooks/: __init__.py  compliance.py
src/planner_lab/memo/: __init__.py  disclaimer.py  render.py
src/planner_lab/schemas/: __init__.py  assumptions.py  case_file.py  critic.py  memo.py  results.py
tests/: test_adapter_fundedness.py  test_adapter_lifecycle.py  test_adapter_mcp_research.py  test_adapter_monteplan.py  test_adapters_lazy.py  test_calculators.py  test_cli.py  test_critic.py  test_csv_import.py  test_hooks.py  test_income_streams.py  test_memo_render.py  test_pipeline_diagnostics.py  test_pipeline_research.py  test_pipeline_stub.py  test_schemas.py  test_simulation_features.py  test_trace.py
tests/data/: synthetic_transactions_actual.csv  synthetic_transactions_ynab.csv
tests/support/: fake_adapters.py  fixtures.py  stub_model.py
