[project]
name = "planner-lab"
version = "0.1.0"
description = "Experimental, provider-neutral framework for auditable personal-finance planning agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
agent = [
    "strands-agents[ollama,otel]>=1.0",
    "strands-agents-tools>=0.2",
]
mcp = [
    "mcp>=1.0",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/planner_lab"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
strict = true
packages = ["planner_lab"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
