[project]
name = "planner-lab"
version = "0.1.1"
description = "Experimental, provider-neutral framework for auditable personal-finance planning agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "John Hodge" }]
keywords = [
    "financial-planning",
    "retirement",
    "monte-carlo",
    "llm-agents",
    "mcp",
    "personal-finance",
    "fire",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
planner-lab = "planner_lab.cli:app"

[project.optional-dependencies]
agent = [
    "strands-agents[ollama,otel]>=1.46,<2",
    "strands-agents-tools>=0.2",
]
planning = [
    "monteplan>=0.6",
    "fundedness>=0.2.4",
]
portfolio = [
    "lifecycle-allocation>=0.2",
]
mcp = [
    "mcp>=1.28",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/planner_lab"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
strict = true
packages = ["planner_lab"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["fundedness.*", "lifecycle_allocation.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Resolve the package from src directly: macOS file syncing intermittently
# marks the venv's editable-install .pth hidden, which Python then skips.
pythonpath = ["src"]
addopts = "-m 'not ollama and not network'"
markers = [
    "ollama: needs a local Ollama server",
    "network: needs internet access",
]
